--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.1",
     "react-slick": "^0.25.2",
     "redux": "^4.0.5",
@@ -53,7 +53,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "start:dev": "NODE_ENV=development DEBUG=cosel:* yarn run build:dev",
+    "start:dev": "NODE_ENV=development DEBUG=cosel:* yarn run build:dev & python3 manage.py runserver",
     "start": "yarn run build",
     "build": "webpack --mode production --config webpack.prod.config.js",
     "build:dev": "webpack --mode development --config webpack.dev.config.js",
