--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "concurrently": "^5.1.0",
     "copy-webpack-plugin": "^6.0.1",
     "css-loader": "^1.0.1",
-    "eslint": "6.0.1",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
@@ -57,6 +57,6 @@
     "start": "yarn run build",
     "build": "webpack --mode production --config webpack.prod.config.js",
     "build:dev": "webpack --mode development --config webpack.dev.config.js",
-    "lint": "./node_modules/.bin/eslint ./src --fix"
+    "lint": "./node_modules/.bin/eslint ./app/src --fix"
   }
 }
