--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 asgiref==3.3.1
+certifi==2020.12.5
+chardet==4.0.0
 Django==3.1.4
+django-webpack-loader==0.7.0
 djangorestframework==3.12.2
+gunicorn==20.0.4
+idna==2.10
 psycopg2==2.8.6
 python-dotenv==0.15.0
 pytz==2020.4
+requests==2.25.1
 sqlparse==0.4.1
-django-webpack-loader==0.7.0
-gunicorn
-whitenoise
+urllib3==1.26.2
+whitenoise==5.2.0
