--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "yarn": "1.22.5"
   },
   "dependencies": {
-    "@material-ui/core": "^3.9.4",
+    "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.21.0",
     "babel-polyfill": "^6.26.0",
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.1",
     "react-slick": "^0.25.2",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "webpack-bundle-tracker": "0.4.3"
