--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.0",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
+    "moment": "^2.29.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-jss": "^10.5.0",
