--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "moment": "^2.29.1",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-dom": "^16.12.0",
     "react-jss": "^10.5.0",
     "react-redux": "^7.1.3",
@@ -23,8 +23,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "2.1.1",
     "react-slick": "^0.25.2",
+    "react-sortablejs": "^6.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sortablejs": "^1.13.0",
     "webpack-bundle-tracker": "0.4.3"
   },
   "devDependencies": {
