--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.3.1
 certifi==2020.12.5
 chardet==4.0.0
+dj-database-url==0.5.0
 Django==3.1.4
+django-heroku==0.3.1
 django-webpack-loader==0.7.0
 djangorestframework==3.12.2
 gunicorn==20.0.4
