--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "2.1.1",
     "react-slick": "^0.25.2",
     "react-sortablejs": "^6.0.0",
+    "react-tabs": "^3.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sortablejs": "^1.13.0",
