--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.21.0",
     "babel-polyfill": "^6.26.0",
+    "chart.js": "^3.4.1",
     "classnames": "^2.2.6",
     "moment": "^2.29.1",
     "react": "^16.13.1",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^16.12.0",
     "react-jss": "^10.5.0",
     "react-redux": "^7.2.3",
