cleanup and fixes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+amqp==1.4.9
+anyjson==0.3.3
 asgiref==3.3.1
+billiard==3.3.0.23
+celery==3.1.26.post2
 certifi==2020.12.5
 chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.1.4
+django-celery==3.3.1
+django-crontab==0.7.1
 django-heroku==0.3.1
 django-webpack-loader==0.7.0
 djangorestframework==3.12.2
 gunicorn==20.0.4
 idna==2.10
+kombu==3.0.37
 psycopg2==2.8.6
 python-dotenv==0.15.0
 pytz==2020.4
