--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 amqp==1.4.9
-anyjson==0.3.3
+APScheduler==3.9.1
 asgiref==3.3.1
+async-timeout==4.0.2
+backports.zoneinfo==0.2.1
 billiard==3.3.0.23
 celery==3.1.26.post2
 certifi==2020.12.5
 chardet==4.0.0
+click==8.1.3
+Deprecated==1.2.13
 dj-database-url==0.5.0
 Django==3.1.4
 django-celery==3.3.1
@@ -15,10 +19,19 @@ djangorestframework==3.12.2
 gunicorn==20.0.4
 idna==2.10
 kombu==3.0.37
+packaging==21.3
 psycopg2==2.8.6
+pyparsing==3.0.9
 python-dotenv==0.15.0
 pytz==2020.4
+pytz-deprecation-shim==0.1.0.post0
+redis==4.3.1
 requests==2.25.1
+rq==1.10.1
+six==1.16.0
 sqlparse==0.4.1
+tzdata==2022.1
+tzlocal==4.2
 urllib3==1.26.2
 whitenoise==5.2.0
+wrapt==1.14.1
