--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-chartjs-2": "^3.0.4",
+    "react-colorful": "^5.5.1",
     "react-dom": "^16.12.0",
     "react-jss": "^10.5.0",
     "react-redux": "^7.2.3",
