--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 APScheduler==3.9.1
-asgiref==3.3.1
+asgiref==3.5.2
 astroid==2.11.5
 backports.zoneinfo==0.2.1
+black==22.6.0
 boto3==1.23.1
 botocore==1.26.1
 certifi==2020.12.5
 cffi==1.15.0
 chardet==4.0.0
 charset-normalizer==2.0.12
+click==8.1.3
 dill==0.3.4
 dj-database-url==0.5.0
 Django==3.2
@@ -17,10 +19,13 @@ django-webpack-loader==0.7.0
 djangorestframework==3.12.2
 gunicorn==20.0.4
 idna==2.10
+importlib-metadata==4.12.0
 isort==5.10.1
 jmespath==1.0.0
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
+mypy-extensions==0.4.3
+pathspec==0.9.0
 platformdirs==2.5.2
 prettytable==3.3.0
 psycopg2==2.8.6
@@ -35,10 +40,12 @@ s3transfer==0.5.2
 six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
-typing-extensions==4.2.0
+typed-ast==1.5.4
+typing_extensions==4.2.0
 tzdata==2022.1
 tzlocal==4.2
 urllib3==1.26.9
 wcwidth==0.2.5
 whitenoise==6.1.0
 wrapt==1.14.1
+zipp==3.8.1
