--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ lazy-object-proxy==1.7.1
 mccabe==0.7.0
 mypy-extensions==0.4.3
 pathspec==0.9.0
+pillow==9.2.0
 platformdirs==2.5.2
 prettytable==3.3.0
 psycopg2==2.8.6
