--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sortablejs": "^1.13.0",
+    "swiper": "^8.3.2",
     "webpack-bundle-tracker": "0.4.3"
   },
   "devDependencies": {
