--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "classnames": "^2.2.6",
     "moment": "^2.29.1",
     "node": "15.4.0",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-colorful": "^5.5.1",
-    "react-dom": "^16.12.0",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
+    "react-dom": "^17.0.2",
     "react-jss": "^10.5.0",
     "react-redux": "^7.2.3",
     "react-reveal": "^1.2.2",
@@ -29,6 +31,7 @@
     "react-slick": "^0.25.2",
     "react-sortablejs": "^6.0.0",
     "react-tabs": "^3.2.2",
+    "react-tag-input": "^6.8.0",
     "react-timer-hook": "^3.0.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
