Added discord slash command, fixed bugs

--- a/foal_server/.env.example
+++ b/foal_server/.env.example
@@ -17,3 +17,4 @@ DISCORD_ANNOUNCEMENTS_CHANNEL=
 RUMBLE_ELO_CONFIRMATION_CHANNEL=
 RUMBLE_ROLE_ID=
 FFCS_CHANNEL_CATEGORY_ID=
+DISCORD_APPLICATION_ID=
