Making read only, fixing stuff

--- a/foal_server/.env.example
+++ b/foal_server/.env.example
@@ -1,10 +1,10 @@
-DEBUG=
-SECRET_KEY=
+DATABASE_HOST=
+DATABASE_PORT=
 DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASS=
-DATABASE_HOST=
-DATABASE_PORT=
+DEBUG=
+SECRET_KEY=
 RIOT_API_KEY=
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
@@ -12,9 +12,12 @@ DISCORD_REDIRECT_URI=
 DISCORD_AUTH_URL=
 DISCORD_BOT_TOKEN=
 DISCORD_BOT_PUBLIC_KEY=
-DISCORD_GUILD_ID=
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_APPLICATION_ID=
 DISCORD_ANNOUNCEMENTS_CHANNEL=
 RUMBLE_ELO_CONFIRMATION_CHANNEL=
 RUMBLE_ROLE_ID=
 FFCS_CHANNEL_CATEGORY_ID=
 DISCORD_APPLICATION_ID=
+WEB_CONCURRENCY=
